--- a/app/index.html
+++ b/app/index.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<!-- Bootstrap 4 CDN CSS [This must be the first CSS tag in the head] -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+
 	<title>Geotehnika</title>
+	
+	<!-- Vollkorn CDN from google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Vollkorn&amp;subset=latin-ext" rel="stylesheet">
+
+	<!-- CSS Styles -->
 	<link rel="stylesheet" type="text/css" href="temp/cssprocssor/styles.css">
 
-	<!-- Bootstrap 4 CDN CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container">
-	  <form action="/action_page.php">
-  	    <div class="form-group">
-   		  <label for="email">Email address:</label>
-       	  <input type="email" class="form-control" id="email">
-  		</div>
-  		<div class="form-group">
-    	  <label for="pwd">Password:</label>
-      	  <input type="password" class="form-control" id="pwd">
-  		</div>
-  		<div class="checkbox">
-    	  <label><input type="checkbox"> Remember me</label>
-  		</div>
-  		<div class="checkbox">
-   		  <label><input type="checkbox"> Remember me</label>
- 		</div>
-  		  <button type="submit" class="btn btn-default">Submit</button>
-	</div>
- 	
+	
+	<h1>sajt geotehnikee<h1>
 
-  	<!-- Bootstrap 4 JS CDN -->
+  	<!-- Bootstrap 4 JS CDN [This must be the last JQuery script in the Body of HTML]-->
   	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
@@ -37,3 +27,5 @@
 
 </body>
 </html>
+
+<!-- pallets: #20282D black/ #009925 darkgreen / #EBF8F3 darkwhite / #F06543 dark orange / #E8E9EB gray :: Also #0F0A0A black / #F5EFED strongwhite / #2292A4 strong blue / #99E00B strong green / #FF7F07 strong orange -->
