zavrsen heading napokon, zapoceto o Nama i Prijava

--- a/app/pages/Galerija.html
+++ b/app/pages/Galerija.html
@@ -5,7 +5,7 @@
 	<!-- Bootstrap 4 CDN CSS [This must be the first CSS tag in the head] -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
-	<title>Geotehnika</title>
+	<title>Galerija</title>
 
 	<!-- Font Awsome CDN -->
 
@@ -15,7 +15,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Vollkorn&amp;subset=latin-ext" rel="stylesheet">
 
 	<!-- CSS Styles -->
-	<link rel="stylesheet" type="text/css" href="temp/cssprocssor/geoteh.css">
+	<link rel="stylesheet" type="text/css" href="../temp/cssprocssor/geoteh.css">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
 	<header class="head">
 		<nav class="navbar navbar-expand-lg head__green">
 		  <div class="container">
-			<a class="navbar-brand" href="#"><img class="head__logo" src="assets/geotehnika_pictures/GeoTehLogo.png"></a>
+			<a class="navbar-brand" href="../index.html"><img class="head__logo" src="../assets/geotehnika_pictures/GeoTehLogo.png"></a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     		  <div class="navbar-toggler-icon">
     		  	<div class="head__menu-icon-top"></div>
@@ -32,26 +32,26 @@
     		  </div>
   			</button>
 			  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-			  	   <ul class="navbar-nav">
-			      <li class="nav-item head__list">
-			        <a class="nav-link head__link--color" href="pages/O_nama.html"><i class="fas fa-info head__i head__i--narrow"></i>O nama</a>
-			      </li>
-			      <li class="nav-item head__list">
-			        <a class="nav-link head__link--color" href="pages/Prijava.html"><i class="fas fa-envelope head__i"></i>Prijava</a>
-			      </li>
-			      <li class="nav-item head__list">
-			        <a class="nav-link head__link--color" href="pages/Usluge.html"><i class="fas fa-money-bill-wave head__i"></i>Usluge</a>
-			      </li>  
-			      <li class="nav-item head__list">
-			        <a class="nav-link head__link--color" href="pages/Projekti.html"><i class="fas fa-cogs head__i"></i>Projekti</a>
-			      </li>    
-			      <li class="nav-item head__list">
-			        <a class="nav-link head__link--color" href="pages/Galerija.html"><i class="fas fa-image head__i"></i>Galerija</a>
-			      </li>  
-			      <li class="nav-item head__list">
-			        <a class="nav-link head__link--color" href="pages/Nauka.html"><i class="fas fa-university head__i"></i>Nauka</a>
-			      </li>          
-			    </ul>	
+			  	  <ul class="navbar-nav">
+			        <li class="nav-item head__list">
+			          <a class="nav-link head__link--color" href="../pages/O_nama.html"><i class="fas fa-info head__i head__i--narrow"></i>O nama</a>
+			        </li>
+			        <li class="nav-item head__list">
+			          <a class="nav-link head__link--color" href="../pages/Prijava.html"><i class="fas fa-envelope head__i"></i>Prijava</a>
+			        </li>
+			        <li class="nav-item head__list">
+			          <a class="nav-link head__link--color" href="../pages/Usluge.html"><i class="fas fa-money-bill-wave head__i"></i>Usluge</a>
+			        </li>  
+			        <li class="nav-item head__list">
+			          <a class="nav-link head__link--color" href="../pages/Projekti.html"><i class="fas fa-cogs head__i"></i>Projekti</a>
+			        </li>    
+			        <li class="nav-item head__list">
+			          <a class="nav-link head__link--color" href="../pages/Galerija.html"><i class="fas fa-image head__i"></i>Galerija</a>
+			        </li>  
+			        <li class="nav-item head__list">
+			          <a class="nav-link head__link--color" href="../pages/Nauka.html"><i class="fas fa-university head__i"></i>Nauka</a>
+			        </li>          
+			      </ul>	
 			  	</div> 
 			  </div>  
 			<div class="head__contact">
@@ -63,23 +63,6 @@
 		</nav>
 	</header>
 
-	<section class="mainpage">
-	  <div class="container">
-	  	<img class="mainpage__picture" src="assets/geotehnika_pictures/urban_night_5-wallpaper-3554x1999.jpg">
-		  <div class="mainpage__content">
-			<div class="row row-eq-height">
-			  <div class="jumbotron mainpage__description col-lg-7">
-				  <h1 class="text-center text-justify">Dobrodošli na sajt geotehnike</h1>
-				  <h2 class="text-center text-justify">Agencija za katastarske registre i ostale projekte<br>
-				  radimo sve geometarske drangulije, merenja i ostala cudesa</h2>
-			  </div>
-		  	  
-		  	</div>
-		  </div>
-	</section>
-	  
-		
-	</section>
 	<h1> content </h1>
 
 
