ubacen skelet za sve stranice osim za glavnu i za nauku

--- a/app/pages/Galerija.html
+++ b/app/pages/Galerija.html
@@ -63,8 +63,96 @@
 		</nav>
 	</header>
 
-	<h1> content </h1>
-
+	<section>
+		<div class="sekcija">
+			<div class="row">
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/sis/MedvedHD.jpg" class="sekcija__slika"">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/pti/condorHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/mor/AjkulaHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/gmiz/AnakondaHD.jpg" class="sekcija__slika">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="sekcija">
+			<div class="row">
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/sis/NosorogHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/pti/jastrebHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/mor/CekicaraHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/gmiz/KomodoHD.jpg" class="sekcija__slika">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="sekcija">
+			<div class="row">
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/sis/TigarHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/pti/OraoHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/mor/KitHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/gmiz/KornjacaHD.jpg" class="sekcija__slika">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="sekcija">
+			<div class="row">
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/sis/VukHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/pti/SokoHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/mor/OrkaHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/gmiz/KrokodilHD.jpg" class="sekcija__slika">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="sekcija">
+			<div class="row">
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/sis/ZderavacHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/pti/SovaHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/mor/RazaHD.jpg" class="sekcija__slika">
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 sekcija__okvir">
+					<img src="../assets/geotehnika_pictures/glaerija/gmiz/PitonHD.jpg" class="sekcija__slika">
+				</div>
+			</div>
+		</div>
+	</section>
 
 
   	<!-- Bootstrap 4 JS CDN [This must be the last JQuery script in the Body of HTML]-->
