--- a/app/pages/Nauka.html
+++ b/app/pages/Nauka.html
@@ -63,9 +63,7 @@
 		</nav>
 	</header>
 
-	<h1> Pitaj Cedu sta ide u nauku </h1>
-
-
+	<h1>VIDI SA CEDOM KOJE LINKOVE I TEST TU DA SE STAVE</h1>
 
   	<!-- Bootstrap 4 JS CDN [This must be the last JQuery script in the Body of HTML]-->
   	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
