--- a/app/pages/Projekti.html
+++ b/app/pages/Projekti.html
@@ -63,8 +63,204 @@
 		</nav>
 	</header>
 
-	<h1> content </h1>
+	<section class="projekti">
+		<div class="container">
+			<div id="Vucic" class="carousel slide" data-ride="carousel">
+		  <ul class="carousel-indicators">
+		    <li data-target="#Vucic" data-slide-to="0" class="active"></li>
+		    <li data-target="#Vucic" data-slide-to="1"></li>
+		    <li data-target="#Vucic" data-slide-to="2"></li>
+		  </ul>
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img src="../assets/geotehnika_pictures/projekti/beo-na-vodi/BeogradUOgledalu.jpg" alt="Los Angeles" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Beograd na Vodi (za dve, maksimum dveipo godine)</h3>
+		        <p>Hvala Predsedniku Vucicu, dole manjinska Srbadija!</p>
+		      </div>   
+		    </div>
+		    <div class="carousel-item">
+		      <img src="../assets/geotehnika_pictures/projekti/beo-na-vodi/BeogradNaVodiPlan.jpg" alt="Chicago" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Plan Beograda na Vodi</h3>
+		        <p>Lex Specijalis "Beograd na Vodi!"</p>
+		      </div>   
+		    </div>
+		    <div class="carousel-item">
+		      <img src="../assets/geotehnika_pictures/projekti/beo-na-vodi/BeogradVodaIzgradnja.jpg" alt="New York" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Izgradnja Beograda na Vodi</h3>
+		        <p>Dole Savamala, Ziveo Dr. Stefanovic!</p>
+		      </div>   
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#Vucic" data-slide="prev">
+		    <span class="carousel-control-prev-icon"></span>
+		  </a>
+		  <a class="carousel-control-next" href="#Vucic" data-slide="next">
+		    <span class="carousel-control-next-icon"></span>
+		  </a>
+		</div>
+	</div>
 
+	<div class="projekti">
+		<div class="container">
+			<div id="hotel" class="carousel slide" data-ride="carousel">
+		  <ul class="carousel-indicators">
+		    <li data-target="#hotel" data-slide-to="0" class="active"></li>
+		    <li data-target="#hotel" data-slide-to="1"></li>
+		    <li data-target="#hotel" data-slide-to="2"></li>
+		  </ul>
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img src="../assets/geotehnika_pictures/projekti/hotel/hotel-inside.jpg" alt="Los Angeles" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Unutrasnjost Dubai hotela (za dve, maksimum dveipo godine)</h3>
+		        <p>Gledaj i placi sirotinjo!</p>
+		      </div>   
+		    </div>
+		    <div class="carousel-item">
+		      <img src="../assets/geotehnika_pictures/projekti/hotel/hotel-shematics.jpg" alt="Chicago" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Plan Hotela u Dubajiju</h3>
+		        <p>Ko da su ga deca na oto crtali."</p>
+		      </div>   
+		    </div>
+		    <div class="carousel-item">
+		      <img src="../assets/geotehnika_pictures/projekti/hotel/hotel.jpg" alt="New York" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Delux Hotel u Dubajiju</h3>
+		        <p>Geotehnikin projekat, Vodja projekta Ceda</p>
+		      </div>   
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#hotel" data-slide="prev">
+		    <span class="carousel-control-prev-icon"></span>
+		  </a>
+		  <a class="carousel-control-next" href="#hotel" data-slide="next">
+		    <span class="carousel-control-next-icon"></span>
+		  </a>
+		</div>
+	</div>
+	</div>
+  
+  <div class="projekti">
+		<div class="container">
+			<div id="demo" class="carousel slide" data-ride="carousel">
+		  <ul class="carousel-indicators">
+		    <li data-target="#demo" data-slide-to="0" class="active"></li>
+		    <li data-target="#demo" data-slide-to="1"></li>
+		    <li data-target="#demo" data-slide-to="2"></li>
+		  </ul>
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img src="../assets/geotehnika_pictures/projekti/piramide/unutra.png" alt="Los Angeles" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Grobnica</h3>
+		        <p>Jer tako je bio Kaops u mogucnosti!</p>
+		      </div>   
+		    </div>
+		    <div class="carousel-item">
+		      <img src="../assets/geotehnika_pictures/projekti/piramide/stare.jpg" alt="Chicago" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Grubi radovi</h3>
+		        <p>Jos samo enterijer!"</p>
+		      </div>   
+		    </div>
+		    <div class="carousel-item">
+		      <img src="../assets/geotehnika_pictures/projekti/piramide/kako izgleda.webp" alt="New York" width="1200" height="600">
+		      <div class="carousel-caption">
+		        <h3>Tuto finito piramida</h3>
+		        <p>Spremna za useljenje!</p>
+		      </div>   
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+		    <span class="carousel-control-prev-icon"></span>
+		  </a>
+		  <a class="carousel-control-next" href="#demo" data-slide="next">
+		    <span class="carousel-control-next-icon"></span>
+		  </a>
+		</div>
+	</div>
+	</div>
+	</section>
+
+	<section class="mali-projekti">
+		<div class="row">
+			<div class="col-12 col-xl-6">
+				<div class="card">
+					<div class="row">
+						<div class="col-lg-6">
+							<img class="mali-projekti__slika" src="../assets/geotehnika_pictures/projekti/ostaliProjekti/angkorWat.png" alt="Card image" style="width:100%">
+						</div>
+						<div class="col-lg-6">
+							<div class="card-body">
+						    <h3 class="card-title">Sauron</h3>
+						    <p class="card-text">Sauron (or Þauron (Thauron); Quenya; IPA: [ˈsaʊron] or Vanyarin; IPA: [ˈθaʊron] - "The Abhorred"), the eponymous Lord of the Rings, was a fallen Maia, the creator of the One Ring, and the most trusted lieutenant of his master Melkor (Morgoth, the first Dark Lord). After Melkor's defeat in the First Age, Sauron became the second Dark Lord and strove to conquer Arda by creating the Rings of Power. In the Second Age, he was defeated in the War of the Last Alliance by the last line of defense: Elves and Men under kings Gil-galad and Elendil.
+						    </p>
+	    				</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-12 col-xl-6">
+				<div class="card">
+					<div class="row">
+						<div class="col-lg-6">
+							<img class="mali-projekti__slika" src="../assets/geotehnika_pictures/projekti/ostaliProjekti/Dam.jpg" alt="Card image" style="width:100%">
+						</div>
+						<div class="col-lg-6">
+							<div class="card-body">
+						    <h3 class="card-title">Sauron</h3>
+						    <p class="card-text">Sauron (or Þauron (Thauron); Quenya; IPA: [ˈsaʊron] or Vanyarin; IPA: [ˈθaʊron] - "The Abhorred"), the eponymous Lord of the Rings, was a fallen Maia, the creator of the One Ring, and the most trusted lieutenant of his master Melkor (Morgoth, the first Dark Lord). After Melkor's defeat in the First Age, Sauron became the second Dark Lord and strove to conquer Arda by creating the Rings of Power. In the Second Age, he was defeated in the War of the Last Alliance by the last line of defense: Elves and Men under kings Gil-galad and Elendil.
+						    </p>
+	    				</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="mali-projekti">		
+		<div class="row">
+			<div class="col-12 col-xl-6">
+				<div class="card">
+					<div class="row">
+						<div class="col-lg-6">
+							<img class="mali-projekti__slika" src="../assets/geotehnika_pictures/projekti/ostaliProjekti/Khalifa.jpg" alt="Card image" style="width:100%">
+						</div>
+						<div class="col-lg-6">
+							<div class="card-body">
+						    <h3 class="card-title">Sauron</h3>
+						    <p class="card-text">Sauron (or Þauron (Thauron); Quenya; IPA: [ˈsaʊron] or Vanyarin; IPA: [ˈθaʊron] - "The Abhorred"), the eponymous Lord of the Rings, was a fallen Maia, the creator of the One Ring, and the most trusted lieutenant of his master Melkor (Morgoth, the first Dark Lord). After Melkor's defeat in the First Age, Sauron became the second Dark Lord and strove to conquer Arda by creating the Rings of Power. In the Second Age, he was defeated in the War of the Last Alliance by the last line of defense: Elves and Men under kings Gil-galad and Elendil.
+						    </p>
+	    				</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-12 col-xl-6">
+				<div class="card">
+					<div class="row">
+						<div class="col-lg-6">
+							<img class="mali-projekti__slika" src="../assets/geotehnika_pictures/projekti/ostaliProjekti/EricsonGlobe.jpg" alt="Card image" style="width:100%">
+						</div>
+						<div class="col-lg-6">
+							<div class="card-body">
+						    <h3 class="card-title">Sauron</h3>
+						    <p class="card-text">Sauron (or Þauron (Thauron); Quenya; IPA: [ˈsaʊron] or Vanyarin; IPA: [ˈθaʊron] - "The Abhorred"), the eponymous Lord of the Rings, was a fallen Maia, the creator of the One Ring, and the most trusted lieutenant of his master Melkor (Morgoth, the first Dark Lord). After Melkor's defeat in the First Age, Sauron became the second Dark Lord and strove to conquer Arda by creating the Rings of Power. In the Second Age, he was defeated in the War of the Last Alliance by the last line of defense: Elves and Men under kings Gil-galad and Elendil.
+						    </p>
+	    				</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
   	<!-- Bootstrap 4 JS CDN [This must be the last JQuery script in the Body of HTML]-->
