--- a/app/pages/Usluge.html
+++ b/app/pages/Usluge.html
@@ -18,6 +18,8 @@
 	<link rel="stylesheet" type="text/css" href="../temp/cssprocssor/geoteh.css">
 
 </head>
+
+
 <body>
 	
 	<header class="head">
@@ -63,7 +65,85 @@
 		</nav>
 	</header>
 
-	<h1> content </h1>
+		<section class="usluge">
+	<div class="container">
+  	<h2>Usluge geotehnike</h2>                                                                             
+ 		<div class="table-responsive-md">          
+	  <table class="table table-dark table-hover">
+	      <thead>
+					<tr>
+						<th>Usluga</th>
+						<th>Opis</th>
+						<th>Cena</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Vutra</td>
+						<td>Duvati</td>
+						<td>500 RSD / mic</td>
+					</tr>
+					<tr>
+						<td>Spid</td>
+						<td><em>per os</em></td>
+						<td>1500 RSD / polutka 1500 RSD</td>
+					</tr>
+					<tr>
+						<td>Ajs</td>
+						<td>Pajp / Fix</td>
+					  <td>3000 / lutka</td>
+					</tr>
+					<tr>
+						<td>Pilulica</td>
+						<td><em>per os</em></td>
+						<td>1000 RSD / tabletica</td>
+					</tr>
+					<tr>
+					  <td>Sneg</td>
+					  <td>Snif</td>
+					  <td>6000 RSD / paketic</td>
+					</tr>
+					<tr>
+					  <td>Stena</td>
+					  <td>Pajp</td>
+						<td>4000 RSD / paketic</td>
+					</tr>
+					<tr>
+					  <td>Zuto</td>
+						<td>Fix</td>
+					  <td>1200 RSD / lutka</td>
+					</tr>
+					<tr>
+						<td>Ujka</td>
+						<td>Fix</td>
+						<td>700 RSD / doza</td>
+					</tr>
+					  <tr>
+						<td>Skank</td>
+						<td>Pajp</td>
+						<td>1000 RSD/ paketic</td>
+					</tr>
+					<tr>
+						<td>Kiselina</td>
+						<td><em>per os</em></td>
+						<td>2000 RSD / tabletica</td>
+					</tr>
+					<tr>
+						<td>Haki</td>
+						<td>Pajp / dzoint</td>
+						<td>1000 RSD / dzoint</td>
+					</tr>
+					<tr>
+						<td>Ammanita Muscaria</td>
+						<td><em>per os</em></td>
+						<td>2500 RSD / pecurka</td>
+					</tr>
+				</tbody>
+	  	</table>
+	  </div>
+	</div>
+</section>
+		
 
 
 
