dodat footer i glavna strana

--- a/app/index.html
+++ b/app/index.html
@@ -59,28 +59,82 @@
 			  <strong>Email: chedicamedica@slatkish.com</strong><br>
 			  <strong>Telefon: 018/555-333</strong><br>
 			  <strong>Adresa: Klintonovih žrtava bb, Niš</strong></p>
-		  	</div>
+		  </div>
 		</nav>
 	</header>
 
 	<section class="mainpage">
-	  <div class="container">
-	  	<img class="mainpage__picture" src="assets/geotehnika_pictures/urban_night_5-wallpaper-3554x1999.jpg">
-		  <div class="mainpage__content">
-			<div class="row row-eq-height">
-			  <div class="jumbotron mainpage__description col-lg-7">
-				  <h1 class="text-center text-justify">Dobrodošli na sajt geotehnike</h1>
-				  <h2 class="text-center text-justify">Agencija za katastarske registre i ostale projekte<br>
-				  radimo sve geometarske drangulije, merenja i ostala cudesa</h2>
-			  </div>
-		  	  
-		  	</div>
-		  </div>
+			<img class="mainpage__background-img" src="./assets/geotehnika_pictures/GeoTehBackImg.jpg">
+		<div class="mainpage__content">
+				<h1 class="text-center text-justify">Dobrodošli na sajt geotehnike</h1>
+				<h2 class="text-center text-justify">Agencija za katastarske registre i ostale projekte<br>
+					  radimo sve geometarske drangulije, merenja i ostala cudesa</h2>
+		</div>
+		<div class="mainpage__wether-witget">
+				<iframe width="400px" height="400px" src="http://katastar.rgz.gov.rs/KnWebPublic/PublicAccess.aspx" style="border: 2px solid black"></iframe>
+		</div>
 	</section>
-	  
+
+	<section class="extra-info">
+		<div class="row">
+			<div class="col-lg-4">
+				<h2 class="extra-info__text">Saznajte vise <a class="extra-info__text--link" href="./pages/O_nama.html"><em>O nama</em></a></h2>
+				<p class="extra-info__text--sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+			</div>
+			<div class="col-lg-4">
+				<h2 class="extra-info__text">Mozete nam se direktno obratiti putem elektronske <a class="extra-info__text--link" href="./pages/Prijava.html"><em>Prijave</em></a></h2>
+				<p class="extra-info__text--sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+			</div>
+			<div class="col-lg-4">
+				<h2 class="extra-info__text">Geotehnika je agencija koja je do sada uradila borjne <a class="extra-info__text--link" href="./pages/Projekti.html"><em>Projekte</em></a></h2>
+				<p class="extra-info__text--sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+			</div>
+		</div>
+	</section>
+
+	<footer class="bg-dark">
+		<div class="row">
+			<div class="footer__segment col-12 col-md-6 col-xl-3">
+				
+			</div>
+
+			<div class="footer__segment col-12 col-md-6 col-xl-3">
+				<div class="head__contact footer__contact text-center text-justify">
+				  <strong>Email: chedicamedica@slatkish.com</strong><br>
+				  <strong>Telefon: 018/555-333</strong><br>
+				  <strong>Adresa: Klintonovih žrtava bb, Niš</strong></p>
+		 		</div>
+			</div>
+
+			<div class="footer__segment col-12 col-md-6 col-xl-3">
+				<ul class="footer__list">
+					<h4 class="footer__link--head">Linkovi:</h4>
+					<li><a class="footer__link" href=""><i class="fas fa-long-arrow-alt-right footer__arrow"></i>Geotehnika</a></li>
+					<li><a class="footer__link" href=""><i class="fas fa-long-arrow-alt-right footer__arrow"></i>O nama</a></li>
+					<li><a class="footer__link" href=""><i class="fas fa-long-arrow-alt-right footer__arrow"></i>Prijava</a></li>
+					<li><a class="footer__link" href=""><i class="fas fa-long-arrow-alt-right footer__arrow"></i>Usluge</a></li>
+					<li><a class="footer__link" href=""><i class="fas fa-long-arrow-alt-right footer__arrow"></i>Projekti</a></li>
+					<li><a class="footer__link" href=""><i class="fas fa-long-arrow-alt-right footer__arrow"></i>Galerija</a></li>
+					<li><a class="footer__link" href=""><i class="fas fa-long-arrow-alt-right footer__arrow"></i>Nauka</a></li>
+				</ul>
+			</div>
+
+			<div class="footer__segment col-12 col-md-6 col-xl-3">
+			
+			</div>
+		</div>
+
 		
-	</section>
-	<h1> content </h1>
+	</footer>
 
 
 
